@@ -32,10 +32,12 @@
 #ifndef __MH_H__
 #define __MH_H__
 
-#include "local.h"
+#include <glib.h>
+#include <vector>
+#include "mh_basic.h"
 
 
-class Mh : public Local {
+class Mh : public Mh_Basic {
 
 protected:
 	std::vector<guint> 		saved_;			// saved uild's
@@ -43,16 +45,16 @@ protected:
 public:
 	// ========================================================================
 	//  base
-	// ========================================================================	
+	// ========================================================================
 	Mh (class Biff *biff);
 	Mh (const Mailbox &other);
 	~Mh (void);
 
 	// ========================================================================
 	//  main
-	// ========================================================================	
-	int connect (void);
-	void fetch (void);
+	// ========================================================================
+	gboolean get_messagenumbers (std::vector<guint> &msn,
+								 gboolean empty = true);
 	std::string file_to_monitor (void);
 };
 
